--- a/dist.ini
+++ b/dist.ini
@@ -4,5 +4,25 @@ license = Perl_5
 copyright_holder = Torsten Raudssus
 copyright_year   = 2010
 
+[Prereqs]
+DateTime = 0
+JSON = 0
+Moose = 1.15
+POE = 0
+URI = 0
+IO::All = 0
+String::Truncate = 0
+MooseX::POE = 0.208
+MooseX::LogDispatch = 0
+MooseX::Getopt = 0
+POE::Component::RSSAggregator = 0
+WWW::Shorten = 0
+WWW::Shorten::Bitly = 0
+Text::Trim = 0
+Net::Twitter = 0
+
+[Prereqs / TestRequires]
+Test::More = 0.88
+
 [@RJBS]
 [GithubMeta]
