--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 name    = App-Twitch
-author  = Torsten Raudssus <torsten@raudssus.de>
+author  = Torsten Raudssus <torsten@raudssus.de> L<http://www.raudssus.de/>
 license = Perl_5
-copyright_holder = Torsten Raudssus
+copyright_holder = L<Raudssus Social Software|http://www.raudssus.de/>
 copyright_year   = 2010
 
 [Prereqs]
