--- a/dist.ini
+++ b/dist.ini
@@ -5,21 +5,33 @@ copyright_holder = L<Raudssus Social Software|http://www.raudssus.de/>
 copyright_year   = 2010
 
 [Prereqs]
-DateTime = 0
-JSON = 0
-Moose = 1.15
-POE = 0
-URI = 0
-IO::All = 0
-String::Truncate = 0
-MooseX::POE = 0.208
-MooseX::LogDispatch = 0
-MooseX::Getopt = 0
+DateTime = 0.66
+JSON = 2.5
+URI = 1.56
+IO::All = 0.41
+String::Truncate = 1.100570
 POE::Component::FeedAggregator = 0.006
-WWW::Shorten = 0
-WWW::Shorten::Bitly = 0
-Text::Trim = 0
-Net::Twitter = 0
+WWW::Shorten = 3.02
+WWW::Shorten::Bitly = 1.14
+Text::Trim = 1.02
+Net::Twitter = 3.14
+Text::Tweet = 0.003
+Text::Keywords = 0.003
+YAML::LibYAML = 0.34 
+POE::Component::Client::HTTP = 0.895
+POE::Component::Client::Keepalive = 0.263
+POE::Component::WWW::Shorten = 1.20
+HTML::ExtractContent = 0.10
+Encode::Detect = 1.01
+Encode = 2.42
+
+Moose = 1.15
+POE = 1.294
+MooseX::POE = 0.208
+MooseX::LogDispatch = 1.2002
+MooseX::Getopt = 0.33
+MooseX::Daemonize = 0.12
+MooseX::SimpleConfig = 0.09
 
 [Prereqs / TestRequires]
 Test::More = 0.90
